force-app/main/default/objects/Int_OLMN_GL__c/Int_OLMN_GL__c.object-meta.xml
<CustomObject>
    <description>This contains the data for the gl interface</description>
    <label>Int OLMN GL</label>
    <nameField>
        <displayFormat>GL-{00000000}</displayFormat>
        <label>General Ledger Out Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int OLMN GL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>