force-app/main/default/objects/Int_OLMN_GL__c/fields/ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT__c</fullName>
    <label>ACCOUNT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>