force-app/main/default/objects/Int_OLMN_GL__c/fields/ACCOUNTING_MONTH__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNTING_MONTH__c</fullName>
    <label>ACCOUNTING MONTH</label>
    <length>2</length>
    <type>Text</type>
</CustomField>