force-app/main/default/objects/Int_OLMN_GL__c/fields/ACCOUNTING_YEAR__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNTING_YEAR__c</fullName>
    <label>ACCOUNTING YEAR</label>
    <length>4</length>
    <type>Text</type>
</CustomField>