force-app/main/default/objects/Int_OLMN_GL__c/fields/AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT__c</fullName>
    <label>AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>