force-app/main/default/objects/Int_OLMN_GL__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>&#39;GL&#39;</defaultValue>
    <label>Category</label>
    <length>2</length>
    <type>Text</type>
</CustomField>