force-app/main/default/objects/Int_OLMN_GL__c/fields/Committed__c.field-meta.xml
<CustomField>
    <fullName>Committed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates if the data has been committed in the destination system.</description>
    <label>Committed</label>
    <type>Checkbox</type>
</CustomField>