force-app/main/default/objects/Int_OLMN_GL__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>5</length>
    <type>Text</type>
</CustomField>