force-app/main/default/objects/Int_OLMN_GL__c/fields/FOREIGN_SUBSYSTEM_ID__c.field-meta.xml
<CustomField>
    <fullName>FOREIGN_SUBSYSTEM_ID__c</fullName>
    <label>FOREIGN SUBSYSTEM ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>