force-app/main/default/objects/Int_OLMN_GL__c/fields/JOURNAL_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>JOURNAL_CATEGORY__c</fullName>
    <label>JOURNAL CATEGORY</label>
    <length>10</length>
    <type>Text</type>
</CustomField>