force-app/main/default/objects/Int_OLMN_GL__c/fields/JOURNAL_CURRENCY__c.field-meta.xml
<CustomField>
    <fullName>JOURNAL_CURRENCY__c</fullName>
    <label>JOURNAL CURRENCY</label>
    <length>10</length>
    <type>Text</type>
</CustomField>