force-app/main/default/objects/Int_OLMN_GL__c/fields/JOURNAL_DATE__c.field-meta.xml
<CustomField>
    <fullName>JOURNAL_DATE__c</fullName>
    <label>JOURNAL DATE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>