force-app/main/default/objects/Int_OLMN_GL__c/fields/JOURNAL_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>JOURNAL_DESCRIPTION__c</fullName>
    <label>JOURNAL DESCRIPTION</label>
    <length>30</length>
    <type>Text</type>
</CustomField>