force-app/main/default/objects/Int_OLMN_GL__c/fields/JOURNAL_ENTRY_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>JOURNAL_ENTRY_NUMBER__c</fullName>
    <label>JOURNAL ENTRY NUMBER</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>