force-app/main/default/objects/Int_OLMN_GL__c/fields/JOURNAL_REFERENCE__c.field-meta.xml
<CustomField>
    <fullName>JOURNAL_REFERENCE__c</fullName>
    <label>JOURNAL REFERENCE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>