force-app/main/default/objects/Int_OLMN_GL__c/fields/JOURNAL_SOURCE_CODE__c.field-meta.xml
<CustomField>
    <fullName>JOURNAL_SOURCE_CODE__c</fullName>
    <label>JOURNAL SOURCE CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>