force-app/main/default/objects/Int_OLMN_GL__c/fields/Movement_Code__c.field-meta.xml
<CustomField>
    <fullName>Movement_Code__c</fullName>
    <description>This field helps in storing grouping criteria for record on GL Accounting Entries Consolidation</description>
    <inlineHelpText>This field helps in storing grouping criteria for record on GL Accounting Entries Consolidation</inlineHelpText>
    <label>Movement Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>