force-app/main/default/objects/Int_OLMN_GL__c/fields/Report_Period__c.field-meta.xml
<CustomField>
    <fullName>Report_Period__c</fullName>
    <label>Report Period</label>
    <length>8</length>
    <type>Text</type>
</CustomField>