force-app/main/default/objects/Int_OLMN_GL__c/fields/SIGN__c.field-meta.xml
<CustomField>
    <fullName>SIGN__c</fullName>
    <label>SIGN</label>
    <length>2</length>
    <type>Text</type>
</CustomField>