force-app/main/default/objects/Int_OLMN_GL__c/fields/TRANSACTION_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>TRANSACTION_DESCRIPTION__c</fullName>
    <label>TRANSACTION DESCRIPTION</label>
    <length>50</length>
    <type>Text</type>
</CustomField>