force-app/main/default/objects/Int_OLMN_GL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AMOUNT__c</columns>
    <columns>Committed__c</columns>
    <columns>JOURNAL_ENTRY_NUMBER__c</columns>
    <columns>JOURNAL_ENTRY_LINE_NUMBER__c</columns>
    <columns>Movement_Code__c</columns>
    <columns>SIGN__c</columns>
    <columns>ACCOUNT__c</columns>
    <columns>TRANSACTION_DESCRIPTION__c</columns>
    <columns>JOURNAL_DATE__c</columns>
    <columns>Report_Period__c</columns>
    <columns>JOURNAL_REFERENCE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>