force-app/main/default/objects/Int_OLMN_GL__c/listViews/All11.listView-meta.xml
<ListView>
    <fullName>All11</fullName>
    <columns>NAME</columns>
    <columns>AMOUNT__c</columns>
    <columns>Committed__c</columns>
    <columns>JOURNAL_ENTRY_NUMBER__c</columns>
    <columns>JOURNAL_ENTRY_LINE_NUMBER__c</columns>
    <columns>Movement_Code__c</columns>
    <columns>SIGN__c</columns>
    <columns>ACCOUNT__c</columns>
    <columns>TRANSACTION_DESCRIPTION__c</columns>
    <columns>JOURNAL_DATE__c</columns>
    <columns>JOURNAL_REFERENCE__c</columns>
    <columns>JOURNAL_DESCRIPTION__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JOURNAL_DATE__c</field>
        <operation>equals</operation>
        <value>20190131</value>
    </filters>
    <label>20190131</label>
</ListView>