force-app/main/default/objects/Int_OLMN_GL__c/listViews/AllUc.listView-meta.xml
<ListView>
    <fullName>AllUc</fullName>
    <columns>NAME</columns>
    <columns>AMOUNT__c</columns>
    <columns>Committed__c</columns>
    <columns>JOURNAL_ENTRY_NUMBER__c</columns>
    <columns>JOURNAL_ENTRY_LINE_NUMBER__c</columns>
    <columns>Movement_Code__c</columns>
    <columns>SIGN__c</columns>
    <columns>ACCOUNT__c</columns>
    <columns>TRANSACTION_DESCRIPTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Committed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Uncommitted</label>
</ListView>